--- a/public/css/responsiveness.css
+++ b/public/css/responsiveness.css
@@ -57,31 +57,37 @@
 
     h1 {
         font-size: 1.75rem;
+        color: #004a53;
     }
 
     h2 {
         font-size: 1.5rem;
+        color: #004a53;
     }
 
     h3 {
         font-size: 1.35rem;
         font-weight: bold;
+        color: #004a53;
     }
 
     h4 {
         font-size: 1.2rem;
         font-weight: bold;
+        color: #004a53;
     }
 
     h5 {
         font-size: 1.1rem;
+        color: #004a53;
     }
 
     h6 {
         font-size: 1rem;
+        color: #004a53;
     }
 
-    p {
+    p, ul, li {
         font-size: 0.9rem;
         line-height: 1.6;
     }
@@ -211,7 +217,7 @@
         font-size: 14px;
     }
 
-    h1 {
+    /* h1 {
         font-size: clamp(22px, 4vw, 40px);
     }
 
@@ -221,7 +227,7 @@
 
     h3 {
         font-size: clamp(16px, 3vw, 28px);
-    }
+    } */
 
     .top_header {
         padding: 2rem;
@@ -271,62 +277,76 @@
 @media (min-width: 401px) and (max-width: 1200px) {
     h1 {
         font-size: 2rem;
+        color: #004a53;
     }
 
     h2 {
         font-size: 1.75rem;
+        color: #004a53;
     }
 
     h3 {
         font-size: 1.55rem;
+        color: #004a53;
     }
 
     h4 {
         font-size: 1.35rem;
+        color: #004a53;
     }
 
     h5 {
         font-size: 1.25rem;
+        color: #004a53;
     }
 
     h6 {
         font-size: 1.1rem;
+        color: #004a53;
     }
 
-    p {
+    p, ul, li {
         font-size: 1rem;
         line-height: 1.7;
+        color: #004a53;
     }
 }
 
 @media (min-width: 1201px) {
     h1 {
         font-size: 3.5rem;
+        color: #004a53;
     }
 
     h2 {
         font-size: 2rem;
+        color: #004a53;
     }
 
     h3 {
         font-size: 1.75rem;
+        color: #004a53;
     }
 
     h4 {
         font-size: 1.5rem;
+        color: #004a53;
     }
 
     h5 {
         font-size: 1.35rem;
+        color: #004a53;
     }
 
     h6 {
         font-size: 1.2rem;
+        color: #004a53;
     }
 
-    p {
+    p, ul, li {
         font-size: 1.1rem;
         line-height: 1.8;
+        color: #004a53;
     }
 }
 
