--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -19,6 +19,9 @@
 body {
     background: #f5f5f5;
 }
+h1,h2,h3,h4,h5,h6,p{
+    margin-bottom: 0px;
+}
 
 /* Typography styles moved to Tailwind - see resources/css/app.css */
 h1 {
@@ -500,6 +503,10 @@ main .container {
     border-radius: 50%;
     display: inline-block;
 }
+.page-footer-link{
+        font-size: 16px;
+        color: var(--muted);
+    }
 
 @media screen and(max-width:320px) {
     .information1 h6,
@@ -535,10 +542,13 @@ main .container {
 
 @media screen and (max-width: 320px) {
     .page-footer {
-        margin-top: 22px;
-        text-align: center;
         color: var(--muted);
         padding: 20px 0;
+        font-size: 16px;
+    }
+    .page-footer-link{
+        font-size: 14px;
+        color: var(--muted);
     }
 }
 
@@ -1356,7 +1366,12 @@ main .container {
     color: #fff;
     position: relative;
     overflow: hidden;
+    height: 300px;
+}
+@media (min-width: 767.98px) {
+.header-section {
     height: 200px;
+}
 }
 
 .header-section h3 {
@@ -1371,6 +1386,16 @@ main .container {
 
 .header-image {
     max-width: 350px;
+    bottom: -10px;
+    right: -60px;
+    z-index: 2;
+}
+.header-card-text{
+    color: #666666;
+    font-size: 14px;
+}
+.userdasboard-card-img{
+   max-height: 50px;
 }
 
 /* Primary Navigation Button (Explore Kokokah) */
