--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -966,9 +966,9 @@ main .container {
 
 .balance-header {
     /* Simulating the green gradient and shape */
-    background: linear-gradient(135deg, #4caf50, #7ee180);
+    background: linear-gradient(135deg,#2EAF4A, #8DD234);
     color: white;
-    padding: 2rem 1.5rem;
+    padding: 2rem 2.5rem;
     border-radius: 0.5rem;
     margin-bottom: 1.5rem;
     position: relative;
@@ -987,6 +987,17 @@ main .container {
     background-position: right top;
     opacity: 0.1;
     pointer-events: none;
+}
+
+.balance-header-title{
+    color: #FFFFFF;
+    font-size: 14px;
+}
+
+
+.balance-header-cardNo{
+    color: #FFEF60;
+    font-size: 14px;
 }
 
 .transaction-item {
@@ -1033,6 +1044,8 @@ main .container {
     font-size: 2rem;
     /* Default size */
     font-weight: bold;
+    font-family: 'fredoka';
+    color: #fff;
 }
 
 @media (min-width: 768px) {
