--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1126,7 +1126,7 @@ main .container {
 
 .chat-history {
     flex-grow: 1;
-    padding: 1.5rem;
+    padding: 0rem 0px 1.5rem;
     overflow-y: auto;
     /* Allows scrolling of messages */
 }
@@ -1134,6 +1134,8 @@ main .container {
 .chat-message {
     display: flex;
     margin-bottom: 1rem;
+    padding-inline: 1.5rem;
+    gap: 10px;
 }
 
 .message-avatar {
@@ -1141,7 +1143,7 @@ main .container {
     height: 35px;
     border-radius: 50%;
     object-fit: cover;
-    margin-right: 0.75rem;
+    flex-shrink: 0;
 }
 
 .message-content {
@@ -1177,6 +1179,7 @@ main .container {
     padding: 4rem 2rem;
     text-align: center;
     color: var(--bs-dark-teal);
+    background-color: #FDAF22;
 }
 
 .welcome-icon {
