--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1012,7 +1012,15 @@ main .container {
     align-items: center;
     justify-content: space-between;
     padding: 1rem 0;
+    gap: 12px;
     border-bottom: 1px solid var(--bs-light-gray);
+}
+
+@media screen and (max-width:768px) {
+.transaction-item {
+    flex-direction: column;
+    align-items: start;
+}
 }
 
 .transaction-details {
