--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1909,7 +1909,6 @@ div.contact-container a {
 .beta-overlay-container {
     background-color: rgba(0, 74, 83, 0.9);
     height: 100%;
-    overflow-y: scroll;
     position: fixed;
     inset: 0;
 }
@@ -1919,10 +1918,11 @@ div.contact-container a {
     box-shadow: 0 0 0 1px #ffffff0d, 0 25px 50px -12px #00000040;
     backdrop-filter: blur(20px);
     background-color: transparent;
-    max-width: 600px;
+    max-width: 520px;
     margin-inline: auto;
-
-    height: auto;
+    overflow-y: scroll;
+    max-height: 600px;
+    height: 500px;
 }
 .beta-content-container {
     padding-inline: 24px;
