--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -215,7 +215,7 @@ body {
     width: 13rem;
     /* height: 40px; */
     border-radius: 8px;
-    object-fit: cover;
+    object-fit: contain;
     /* flex-shrink: 0; */
 }
 
