--- a/public/css/responsiveness.css
+++ b/public/css/responsiveness.css
@@ -544,3 +544,15 @@
         font-size: clamp(16px, 3vw, 28px);
     }
 } */
+
+@media screen and (min-width:992px) {
+    .add-margin{
+        margin-block: 60px;
+    }
+.overflow-img{
+margin-top: -60px;
+  margin-bottom: -60px;
+  height: 450px;
+  max-height: 450px;
+}
+}
