--- a/public/css/responsiveness.css
+++ b/public/css/responsiveness.css
@@ -555,4 +555,16 @@ margin-top: -60px;
   height: 450px;
   max-height: 450px;
 }
+.content-card {
+    position: relative;
+    z-index: 5;
+}
+
+@media (min-width: 992px) {
+    .content-card {
+        margin-right: -180px;
+        border-radius: 1.5rem;
+    }
+}
+
 }
