--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2153,7 +2153,7 @@ div.contact-container a {
 .product-images{
    height: auto;
    max-height: 400px;
-   bject-fit: fill;
+   object-fit: fill;
 }
 
 
