--- a/public/css/style_theme.css
+++ b/public/css/style_theme.css
@@ -15,7 +15,7 @@
 }
 
 * {
-    font-family: "Quicksand", sans-serif;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
