--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -53,7 +53,6 @@ p {
 .mysubject {
     width: 30%;
     z-index: -1;
-    max-width: 400px;
 }
 
 @media screen and (max-width: 320px) {
@@ -2341,4 +2340,9 @@ input.search-input-custom-input {
 .notification-empty p {
     margin: 0;
     font-size: 14px;
+}
+
+.footer-link{
+    font-size: 12px;
+    color: #667797;
 }
