added kudikah modals

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -47,6 +47,16 @@ p {
   white-space: nowrap;
 }
 
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type="number"] {
+    -moz-appearance: textfield;
+}
+
 
 /* Button styles moved to Tailwind - see resources/css/app.css */
 
