--- a/public/css/responsiveness.css
+++ b/public/css/responsiveness.css
@@ -56,41 +56,41 @@
     }
 
     h1 {
-        font-size: 1.75rem;
+        font-size: 1.60rem;
         color: #004a53;
     }
 
     h2 {
-        font-size: 1.5rem;
+        font-size: 1.4rem;
         color: #004a53;
     }
 
     h3 {
-        font-size: 1.35rem;
+        font-size: 1.25rem;
         font-weight: bold;
         color: #004a53;
     }
 
     h4 {
-        font-size: 1.2rem;
+        font-size: 1.1rem;
         font-weight: bold;
         color: #004a53;
     }
 
     h5 {
-        font-size: 1.1rem;
+        font-size: 1rem;
         color: #004a53;
     }
 
     h6 {
-        font-size: 1rem;
+        font-size: 0.9rem;
         color: #004a53;
     }
 
     p,
     ul,
     li {
-        font-size: 0.9rem;
+        font-size: 0.8rem;
         line-height: 1.6;
     }
 }
@@ -124,6 +124,10 @@
     .feature-number {
         left: 120px;
     }
+
+    .feature-card {
+    padding: 20px;
+}
 }
 
 /* ===== TABLET BREAKPOINTS (768px - 991px) ===== */
@@ -284,37 +288,37 @@
 
 @media (min-width: 401px) and (max-width: 1200px) {
     h1 {
-        font-size: 2rem;
+        font-size: 1.8rem;
         color: #004a53;
     }
 
     h2 {
-        font-size: 1.75rem;
-        color: #004a53;
-    }
-
-    h3 {
         font-size: 1.55rem;
         color: #004a53;
     }
 
-    h4 {
+    h3 {
         font-size: 1.35rem;
         color: #004a53;
     }
 
-    h5 {
+    h4 {
         font-size: 1.25rem;
         color: #004a53;
     }
 
+    h5 {
+        font-size: 1.15rem;
+        color: #004a53;
+    }
+
     h6 {
-        font-size: 1.1rem;
+        font-size: 1rem;
         color: #004a53;
     }
 
     p {
-        font-size: 1rem;
+        font-size: 0.8rem;
         line-height: 1.7;
         color: #004a53;
     }
