--- a/public/css/responsiveness.css
+++ b/public/css/responsiveness.css
@@ -380,6 +380,7 @@
     }
     .achievement-section {
         min-height: 700px;
+        padding-top: 100px;
     }
 }
 
@@ -566,10 +567,11 @@
         margin-block: 60px;
     }
     .overflow-img {
-        margin-top: -60px;
-        margin-bottom: -60px;
-        height: 400px;
-        max-height: 400px;
+        margin-top: -50px;
+        margin-bottom: -70px;
+        height: auto;
+        max-width: 100%;
+        
     }
     .content-card {
         position: relative;
