--- a/public/css/responsiveness.css
+++ b/public/css/responsiveness.css
@@ -334,37 +334,37 @@
 
 @media (min-width: 1201px) {
     h1 {
-        font-size: 3.5rem;
-        color: #004a53;
-    }
-
-    h2 {
         font-size: 2rem;
         color: #004a53;
     }
 
+    h2 {
+        font-size: 1.7rem;
+        color: #004a53;
+    }
+
     h3 {
-        font-size: 1.75rem;
+        font-size: 1.55rem;
         color: #004a53;
     }
 
     h4 {
-        font-size: 1.5rem;
-        color: #004a53;
-    }
-
-    h5 {
         font-size: 1.35rem;
         color: #004a53;
     }
 
+    h5 {
+        font-size: 1.15rem;
+        color: #004a53;
+    }
+
     h6 {
-        font-size: 1.2rem;
+        font-size: 1.0rem;
         color: #004a53;
     }
 
     p {
-        font-size: 1.1rem;
+        font-size: 0.9rem;
         line-height: 1.8;
         color: #004a53;
     }
@@ -573,8 +573,8 @@
     .overflow-img {
         margin-top: -55px;
         margin-bottom: -70px;
+        width: 100%;
         height: auto;
-        max-width: 100%;  
         aspect-ratio: 1/1;
     }
     .content-card {
@@ -584,8 +584,8 @@
             border-radius: 1.5rem;
     }
     .margin-top {
-        margin-top: 100px !important; 
+        margin-top: 100px !important;
     }
 
-    
+
 }
