--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -2208,15 +2208,16 @@ select {
     border: 1.5px solid #004a53;
     display: flex;
     flex-direction: column;
-    padding: 0px 27px 14px;
+    padding: 14px 27px 14px;
     border-radius: 15px;
     position: relative;
     margin-top: 15px;
 }
 
 .modal-label {
-    position: relative;
+    position: absolute;
     top: -15px;
+    left: 27px;
     color: #004a53;
     font-size: 14px;
     background-color: white;
